--- a/css/politicarecompensas.css
+++ b/css/politicarecompensas.css
@@ -169,6 +169,7 @@ h3 {
 
 .rewards .container {
     background-color: var(--primary-background);
+    padding: 6rem 4rem;
 
 }
 
@@ -196,7 +197,7 @@ h3 {
     justify-content: center;
     align-items: center;
     gap: 3rem;
-    padding: 2rem 1rem;
+    padding: 4rem 2rem;
 }
 
 .rewards__card {
@@ -274,6 +275,14 @@ footer {
 
     .nav button {
         width: 50%;
+    }
+
+    .rewards .container {
+        padding: 2rem 1rem;
+    }
+
+    .rewards__box {
+        flex-wrap: wrap;
     }
 }
 
