responsive final update

--- a/css/ondedescartar.css
+++ b/css/ondedescartar.css
@@ -372,8 +372,9 @@ footer {
         padding: 2rem 4rem;
     }
 
-    .container {
-        padding: 12rem 8rem;
+    .hero .container {
+        /* padding: 12rem 8rem; */
+        height: 70vh;
     }
 
     .hero img {
